--- a/FrontEnd/css/contracts.html
+++ b/FrontEnd/css/contracts.html
@@ -150,5 +150,37 @@ th {
   transform: translateY(0);
 }
 
+.modify-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 5px 10px; /* Reduced padding */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 12px; /* Smaller font size */
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.modify-button a {
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex; /* Use flexbox for centering */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
+
+.modify-button:hover {
+  background-color: #45a049;
+  transform: translateY(-2px);
+}
+
+.modify-button:active {
+  background-color: #388e3c;
+  transform: translateY(0);
+}
 
 </style>
