--- a/FrontEnd/html/dashboard.html
+++ b/FrontEnd/html/dashboard.html
@@ -14,7 +14,9 @@
 <body>
   <header>
     <h1>Dashboard</h1>
-    <div class="header-right">Hello ___</div>
+    <div class="header-right">
+      Hello, <span id="username">User</span>
+    </div>
   </header>
   <div class="container">
     <aside>
